daisy UI dark mode changed included. Navbar buttons fixed

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -26,11 +26,6 @@
   border: none;
 }
 
-.nav-bar .right-divison .nav-link:hover {
-  color: black;
-  background-color: #f1f1f1;
-}
-
 .nav-bar .right-divison .nav-button {
   display: flex;
   flex-direction: row;
@@ -38,10 +33,4 @@
   align-items: center;
   font-size: large;
   padding: 0 2rem;
-  color: var(--primary-color);
-}
-
-.nav-bar .right-divison .nav-button:hover {
-  color: #ffffff;
-  background-color: var(--primary-color);
 }
